# what-if-data-donation

./: .buildinfo  .gitignore  CITATION.cff  README.md  asset-manifest.json  d3i_py_worker.js  development.md  environment.yaml  generate_tiktok_wva.py  generate_x_wva.py  genindex.html  index.html  objects.inv  package-lock.json  package.json  placeholder.md  port-0.0.0-py3-none-any.whl  print_table.py  py-modindex.html  pyproject.toml  release.sh  requirements.txt  search.html  searchindex.js  vite.config.ts  workflow_data_donation_tool.md
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst
api/: api.html  index.html
articles/: creating-your-own-data-donation-task.html  data-donation-checklist.html  deployment.html  index.html  installation.html  introduction-to-data-donation.html  next-in-docker.html  visualizations.html
doc/: api.md  conf.py  index.rst
env/: pyvenv.cfg
flow_generation/: generate_entries.py
generation-notebooks/: donation_flow_generation_nb.ipynb
json_structure_donations/: FB_example_json_to_csv.ipynb  IG_example_json_to_csv.ipynb  TT_example_json_to_csv.ipynb  X_readme_to_csv.ipynb  YT_column_name_extractor.ipynb  YT_example_json_to_csv.ipynb  example_json_to_csv.ipynb  json_to_csv.ipynb  schema.csv
pytests/: README.md  conftest.py  create_scenario.py  test_extract.py  test_structure.py  test_validation.py
src/: devApp.tsx  devPyodideWorker.js  index.tsx  live_bridge.ts  usePyodideWorker.ts
standard_scripts/: index.html
structure_donations/: X_compare.ipynb  generate_entries.py  structure_parsers.py  (+1 more)
(+424 files in other folders)
