[project]
name = "what-if-data-donation"
description = "Functionality for Data Donation in WHAT-IF"
version = "0.1.0"
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pandas-stubs",
    "pytest",
    "pytest-html",
    "tabulate",
]

[tool.setuptools]
package-dir = {"" = "packages/python"}  # Root packages are in src/
packages = ["port"]
